// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset orion-fusion-theme fieldset orion-fusion-theme"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field orion-fusion-theme field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-55"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Precision, Precision"
          aria-required="false"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-55"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-54"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field orion-fusion-theme field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-59"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Granularity, Granularity"
          aria-required="false"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-59"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-58"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for date 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={{}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="date"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      id="dynamic_content"
    >
      <Field
        className="field-inline date"
        error={null}
        errorIcon={
          <IconError
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        help={null}
        hideRequired={false}
        isInline={false}
        isInvalid={false}
        isLabelHidden={false}
        label="Terra.onsetPicker.date"
        labelAttrs={
          {
            "aria-hidden": "true",
            "id": "test-date-input-label",
          }
        }
        required={false}
        showOptional={false}
      >
        <InjectIntl(DatePicker)
          maxDate="2017-11-15"
          minDate="2011-08-16"
          name="test-date-input"
          onChangeRaw={[Function]}
          required={false}
          selectedDate="2014-08-16"
        />
      </Field>
    </div>
  </Fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for month and year 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={{}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="month"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      id="dynamic_content"
    >
      <InjectIntl(SelectField)
        className="field-inline month"
        label="Terra.onsetPicker.month"
        labelAttrs={
          {
            "id": "test-month-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.month"
        required={false}
        selectId="test-month-select"
      >
        <Option
          disabled={false}
          display="Terra.onsetPicker.january"
          key="0"
          value="0"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.february"
          key="1"
          value="1"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.march"
          key="2"
          value="2"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.april"
          key="3"
          value="3"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.may"
          key="4"
          value="4"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.june"
          key="5"
          value="5"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.july"
          key="6"
          value="6"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.august"
          key="7"
          value="7"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.september"
          key="8"
          value="8"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.october"
          key="9"
          value="9"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.november"
          key="10"
          value="10"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.december"
          key="11"
          value="11"
        />
      </InjectIntl(SelectField)>
      <InjectIntl(SelectField)
        className="field-inline year"
        label="Terra.onsetPicker.year"
        labelAttrs={
          {
            "id": "test-year-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.year"
        required={false}
        selectId="test-year-select"
      >
        <Option
          disabled={false}
          display="2011"
          key="2011"
          value="2011"
        />
        <Option
          disabled={false}
          display="2012"
          key="2012"
          value="2012"
        />
        <Option
          disabled={false}
          display="2013"
          key="2013"
          value="2013"
        />
        <Option
          disabled={false}
          display="2014"
          key="2014"
          value="2014"
        />
        <Option
          disabled={false}
          display="2015"
          key="2015"
          value="2015"
        />
        <Option
          disabled={false}
          display="2016"
          key="2016"
          value="2016"
        />
        <Option
          disabled={false}
          display="2017"
          key="2017"
          value="2017"
        />
      </InjectIntl(SelectField)>
    </div>
  </Fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for precision, granularity and age 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={{}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="age"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      id="dynamic_content"
    >
      <InputField
        className="field-inline age"
        defaultValue={3}
        disabled={false}
        error={null}
        errorIcon={
          <IconError
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        help={null}
        hideRequired={false}
        inputAttrs={
          {
            "max": 6,
            "min": 0,
            "step": 1,
            "type": "number",
          }
        }
        inputId="test-age-input"
        isIncomplete={false}
        isInline={false}
        isInvalid={false}
        isLabelHidden={false}
        label="Terra.onsetPicker.age"
        labelAttrs={
          {
            "id": "test-age-input-label",
          }
        }
        onChange={[Function]}
        required={false}
        showOptional={false}
      />
      <InjectIntl(SelectField)
        className="field-inline age-unit"
        defaultValue="years"
        label="Terra.onsetPicker.agePrecision"
        labelAttrs={
          {
            "id": "test-age-unit-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.agePrecision"
        required={false}
        selectId="test-age-unit-select"
      >
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionWeek"
          key="weeks"
          value="weeks"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionMonth"
          key="months"
          value="months"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionYear"
          key="years"
          value="years"
        />
      </InjectIntl(SelectField)>
    </div>
  </Fieldset>
</div>
`;

exports[`should render a default onset picker with specified onset date 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-3"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Precision, Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-3"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-2"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-7"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Granularity, Granularity"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-7"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-6"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render only a select when supplied with the UNKNOWN precision 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-11"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Unknown Selected., Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-11"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-9"
            >
              Unknown
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render only the supplied precisions 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-47"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Precision, Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-47"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-46"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-51"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Granularity, Granularity"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-51"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-50"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render the same when onChange function is supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-39"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Precision, Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-39"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-38"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-43"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Granularity, Granularity"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-43"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-42"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render with age inputs filled in when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-27"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Before Selected., Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-27"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-25"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-31"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Age Selected., Granularity"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-31"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-29"
            >
              Age
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      >
        <div
          class="field field-inline age"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-age-input"
              id="test-age-input-label"
            >
              Age
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <input
            class="form-input"
            id="test-age-input"
            max="6"
            min="0"
            step="1"
            type="number"
            value="3"
          />
        </div>
        <div
          class="field field-inline age-unit"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-age-unit-select"
              id="test-age-unit-select-label"
            >
              Age Precision
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-35"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-invalid="false"
            aria-label="Year(s) Selected., Age Precision"
            aria-required="false"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-age-unit-select"
            role="combobox"
            tabindex="0"
          >
            <label
              hidden=""
            >
              <input
                type="text"
              />
            </label>
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-description-35"
              >
                Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-hidden="false"
              class="display"
            >
              <span
                aria-hidden="true"
                id="terra-select-screen-reader-display-33"
              >
                Year(s)
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render with non default inputs when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-15"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Before Selected., Precision"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-15"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-13"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-19"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-invalid="false"
          aria-label="Year Selected., Granularity"
          aria-required="false"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="combobox"
          tabindex="0"
        >
          <label
            hidden=""
          >
            <input
              type="text"
            />
          </label>
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-description-19"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-hidden="false"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-17"
            >
              Year
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
        </div>
      </div>
      <div
        id="dynamic_content"
      >
        <div
          class="field field-inline year"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-year-select"
              id="test-year-select-label"
            >
              Year
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-23"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-invalid="false"
            aria-label="2014 Selected., Year"
            aria-required="false"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-year-select"
            role="combobox"
            tabindex="0"
          >
            <label
              hidden=""
            >
              <input
                type="text"
              />
            </label>
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-description-23"
              >
                Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-hidden="false"
              class="display"
            >
              <span
                aria-hidden="true"
                id="terra-select-screen-reader-display-21"
              >
                2014
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
